--- a/app/src/main/res/layout/activity_main_musica2.xml
+++ b/app/src/main/res/layout/activity_main_musica2.xml
@@ -54,9 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="176dp"
         android:ems="10"
+        android:fontFamily="@font/allerta"
         android:hint="Nombre de Evento"
         android:inputType="text"
-        android:text="Nombre de Evento"
+        android:text="MORAT"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,34 +69,35 @@
         android:id="@+id/btnParch1"
         android:layout_width="247dp"
         android:layout_height="42dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="#0BC23F"
         android:text="¡Parchemos!"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/imgBut2" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imgBut1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtEvent1"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/imgBut2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
+        app:layout_constraintTop_toBottomOf="@+id/imgBut1"
         tools:srcCompat="@tools:sample/avatars" />
 
 
